created user json file and privacy policy

--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
   <!-- HEADER START -->
   <header>
     <h1>
-      <a href="/main.html">Liquor Stores<i class="fa-solid fa-martini-glass"></i></a>
+      <a href="./main.html">Liquor Stores<i class="fa-solid fa-martini-glass"></i></a>
     </h1>
   </header>
  
@@ -25,7 +25,7 @@
   <nav class="gnav">
 
     <ul class="gnav_wrapper">
-      <li><a href="/beer.html">Beer</a></li>
+      <li><a href="./beer.html">Beer</a></li>
       <li><a href="/wine.html">Wine</a></li>
       <li><a href="/sake.html">Sake</a></li>
       <li><a href="/other.html">Other</a></li>
