--- a/cart.html
+++ b/cart.html
@@ -26,10 +26,8 @@
       <li><a href="/wine.html">Wine</a></li>
       <li><a href="/sake.html">Sake</a></li>
       <li><a href="/other.html">Other</a></li>
-      <li><a href="/main.html">Logout</a></li>
+      <!-- <li><a href="/main.html">Logout</a></li> -->
       <li><a href="/login.html">Login</a></li>
-      <li><a href="/sign-up.html">Sign Up</a></li>
-      <li><a href="/account-info.html"><i class="fa-solid fa-user"></i></a></li>
       <li><a href="/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
     </ul>
   </nav>
