--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,10 +27,8 @@
       <li><a href="/wine.html">Wine</a></li>
       <li><a href="/sake.html">Sake</a></li>
       <li><a href="/other.html">Other</a></li>
-      <li><a href="/main.html">Logout</a></li>
+      <!-- <li><a href="/main.html">Logout</a></li> -->
       <li><a href="/login.html">Login</a></li>
-      <li><a href="/sign-up.html">Sign Up</a></li>
-      <li><a href="/account-info.html"><i class="fa-solid fa-user"></i></a></li>
       <li><a href="/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
     </ul>
   </nav>
@@ -37,7 +36,7 @@
 
   <main>
     <div class="form-wrapper">
-      <h2>LogIn</h2>
+      <h2>Login</h2>
       <form>
         <div class="form-item">
           <label for="email">Email</label>
@@ -47,21 +46,21 @@
           <label for="password">Password</label>
           <input type="password" name="password" required="required" placeholder="enter your password"></input>
         </div>
-        <p class="check">
-          <input type="checkbox" name="checkbox" /> Remember Me
-        </p>
+        <!-- REMEMBER ME START -->
+        <div class="check">
+          <input type="checkbox" name="remember" />
+          <label for="remember">Remember me</label>
+        </div>
+        <!-- REMEMBER ME END -->
         <div class="button-panel">
-          <input type="submit" class="login-btn " title="Sign In" value="Sign In"></input>
+          <input type="submit" class="login-btn " title="Login" value="Login"></input>
         </div>
       </form>
-      <div class="form-footer">
-        <p><a href="/sign-up.html">Create an account</a></p>
-      </div>
     </div>
 
   </main>
 
-<!-- FOOTER -->
+  <!-- FOOTER -->
   <footer>
     <aside>
       <a href="#">Terms of service</a>
@@ -69,7 +68,7 @@
     </aside>
     <p>&copy;Copyright 2022 Final Project</p>
   </footer>
-  
+
 </body>
 
 </html>
