--- a/main.html
+++ b/main.html
@@ -23,16 +23,13 @@
 
   <!-- NAV START -->
   <nav class="gnav">
-
     <ul class="gnav_wrapper">
-      <li><a href="./beer.html">Beer</a></li>
+      <li><a href="/beer.html">Beer</a></li>
       <li><a href="/wine.html">Wine</a></li>
       <li><a href="/sake.html">Sake</a></li>
       <li><a href="/other.html">Other</a></li>
-      <li><a href="/main.html">Logout</a></li>
+      <!-- <li><a href="/main.html">Logout</a></li> -->
       <li><a href="/login.html">Login</a></li>
-      <li><a href="/sign-up.html">Sign Up</a></li>
-      <li><a href="/account-info.html"><i class="fa-solid fa-user"></i></a></li>
       <li><a href="/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
     </ul>
   </nav>
