--- a/wine.html
+++ b/wine.html
@@ -156,8 +156,7 @@
   <!-- FOOTER -->
   <footer>
     <aside>
-      <a href="#">Terms of service</a>
-      <a href="#">Privacy policy</a>
+      <a href="/terms.html">Terms of service</a>
     </aside>
     <p>&copy;Copyright 2022 Final Project</p>
   </footer>
