--- a/cart.html
+++ b/cart.html
@@ -77,13 +77,12 @@
   </main>
 
 <!-- FOOTER -->
-  <footer>
-    <aside>
-      <a href="#">Terms of service</a>
-      <a href="#">Privacy policy</a>
-    </aside>
-    <p>&copy;Copyright 2022 Final Project</p>
-  </footer>
+<footer>
+  <aside>
+    <a href="/terms.html">Terms of service</a>
+  </aside>
+  <p>&copy;Copyright 2022 Final Project</p>
+</footer>
 
 </body>
 <script>
