--- a/login.html
+++ b/login.html
@@ -63,12 +63,10 @@
   <!-- FOOTER -->
   <footer>
     <aside>
-      <a href="#">Terms of service</a>
-      <a href="#">Privacy policy</a>
+      <a href="/terms.html">Terms of service</a>
     </aside>
     <p>&copy;Copyright 2022 Final Project</p>
   </footer>
-
 </body>
 
 </html>
