--- a/order.html
+++ b/order.html
@@ -89,8 +89,7 @@
   <!-- FOOTER -->
   <footer>
     <aside>
-      <a href="#">Terms of service</a>
-      <a href="#">privacy policy</a>
+      <a href="/terms.html">Terms of service</a>
     </aside>
     <p>&copy;Copyright 2022 Final Project</p>
   </footer>
