--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -15,7 +15,7 @@
   <!-- HEADER START -->
   <header>
     <h1>
-      <a href="/main.html">Liquor Stores<i class="fa-solid fa-martini-glass"></i></a>
+      <a href="./main.html">Liquor Stores<i class="fa-solid fa-martini-glass"></i></a>
     </h1>
   </header>
   <!-- HEADER END -->
@@ -33,15 +33,15 @@
     </ul>
   </nav>
   <!-- NAV END -->
-    <div class="hero-terms">
-      <div class="wrap">
-        <h2>Terms of service</h2>
-      </div>
+  <div class="hero-terms">
+    <div class="wrap">
+      <h2>Terms of service</h2>
     </div>
+  </div>
   <main class="terms">
     <section>
       <p>
-        Last updated: July 27, 2022
+        Last updated: July 27, 2022 <br>
         Please read these terms and conditions carefully before using Our Service.
       </p>
     </section>
@@ -68,8 +68,7 @@
             Country refers to: British Columbia, Canada
           </li>
           <li>
-            Company (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to TAG Canada,
-            19055 34A.
+            Company (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Liquor Store.
           </li>
           <li>
             Device means any device that can access the Service such as a computer, a cellphone or a digital tablet.
@@ -87,7 +86,7 @@
             services) provided by a third-party that may be displayed, included or made available by the Service.
           </li>
           <li>
-            Website refers to Tag Canada, accessible from https://tagcanada.myshopify.com/
+            Website refers to Liquor Store, accessible from https://liquorstore.com
           </li>
           <li>
             You means the individual accessing or using the Service, or the company, or other legal entity on behalf of
@@ -111,7 +110,7 @@
           any part of these Terms and Conditions then You may not access the Service.
         </p>
         <p>
-          You represent that you are over the age of 18. The Company does not permit those under 18 to use the Service.
+          You represent that you are over the age of 19. The Company does not permit those under 19 to use the Service.
         </p>
         <p>
           Your access to and use of the Service is also conditioned on Your acceptance of and compliance with the
@@ -294,8 +293,8 @@
       <div>
         <p>
           If you have any questions about these Terms and Conditions, You can contact us:<br>
-          By email: jake@tagcanada.ca <br>
-          By Phone: 604-372-0588 <br>
+          By email: akane@liquorstore.ca <br>
+          By Phone: 123-456-7899 <br>
         </p>
       </div>
     </section>
@@ -304,7 +303,7 @@
   <!-- FOOTER -->
   <footer>
     <aside>
-      <a href="/terms.html">Terms of service</a>
+      <a href="./privacyPolicy.html">Privacy Policy</a>
     </aside>
     <p>&copy;Copyright 2022 Final Project</p>
   </footer>
