--- a/login.html
+++ b/login.html
@@ -9,13 +9,19 @@
   <link rel="stylesheet" href="./css/style.css">
   <!-- FONT AWSOME -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+  <script src="./assets/js/classes/User.js" defer></script>
+  <script src="./assets/js/classes/Customer.js" defer></script>
+  <script src="./assets/js/classes/js_functions/signIn.js" defer></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 </head>
 
-<body>
+<body ng-app="myApp">
   <!-- HEADER START -->
   <header>
     <h1>
-      <a href="/main.html">Liquor Stores<i class="fa-solid fa-martini-glass"></i></a>
+      <a href="./main.html">Liquor Stores<i class="fa-solid fa-martini-glass"></i></a>
     </h1>
   </header>
   <!-- HEADER END -->
@@ -28,32 +34,33 @@
       <li><a href="/sake.html">Sake</a></li>
       <li><a href="/other.html">Other</a></li>
       <!-- <li><a href="/main.html">Logout</a></li> -->
-      <li><a href="/login.html">Login</a></li>
+      <li ng-show="toggleIn"><a href="./login.html">Sign In</a></li>
+      <li ng-show="toggleOut"><a href="" ng-click="logoutBtn()">Sign Out</a></li>
       <li><a href="/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
     </ul>
   </nav>
   <!-- NAV END -->
 
-  <main>
-    <div class="form-wrapper">
-      <h2>Login</h2>
+  <main ng-controller="Ctrl">
+    <div class="form-wrapper" ng-show="loginView">
+      <h2>LogIn</h2>
       <form>
         <div class="form-item">
           <label for="email">Email</label>
-          <input type="email" name="email" required="required" placeholder="hello@example.com"></input>
+          <input type="text" ng-model="email" placeholder="hello@example.com" required />
         </div>
         <div class="form-item">
           <label for="password">Password</label>
-          <input type="password" name="password" required="required" placeholder="enter your password"></input>
+          <input type="password" ng-model="password" placeholder="enter your password" required />
         </div>
-        <!-- REMEMBER ME START -->
-        <div class="check">
-          <input type="checkbox" name="remember" />
-          <label for="remember">Remember me</label>
+        <div ng-show="wrongInfo">
+          <span style="color: red;">*Incorrect email address or password</span>
         </div>
-        <!-- REMEMBER ME END -->
-        <div class="button-panel">
-          <input type="submit" class="login-btn " title="Login" value="Login"></input>
+        <p class="check">
+          <input type="checkbox" name="checkbox" /> Remember Me
+        </p>
+        <div class="button-panel" ng-model="btn_login">
+          <input type="submit" class="login-btn" title="Sign In" value="Sign In" ng-click="loginBtn()">
         </div>
       </form>
     </div>
@@ -70,5 +77,3 @@
 </body>
 
 </html>
-
-<!-- april's trial commit  -->
