--- a/order.html
+++ b/order.html
@@ -9,13 +9,18 @@
   <link rel="stylesheet" href="./css/style.css">
   <!-- FONT AWSOME -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+  <script src="./assets/js/classes/js_functions/signIn.js" defer></script>
+  <script src="./assets/js/classes/User.js" defer></script>
+  <script src="./assets/js/classes/Customer.js" defer></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 
-<body>
+<body ng-app="myApp">
   <!-- HEADER START -->
   <header>
     <h1>
-      <a href="/main.html">Liquor Stores<i class="fa-solid fa-martini-glass"></i></a>
+      <a href="./main.html">Liquor Stores<i class="fa-solid fa-martini-glass"></i></a>
     </h1>
   </header>
   <!-- HEADER END -->
@@ -28,35 +33,36 @@
       <li><a href="/sake.html">Sake</a></li>
       <li><a href="/other.html">Other</a></li>
       <!-- <li><a href="/main.html">Logout</a></li> -->
-      <li><a href="/login.html">Login</a></li>
-      <li><a href="/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+      <li><a href="./login.html">Login</a></li>
+      <li><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
     </ul>
   </nav>
   <!-- NAV END -->
 
-  <main>
+  <main ng-controller="Ctrl">
     <div class="confirm-order-wrap">
       <div class="checkout-summary">
         <div class="user-infomation">
           <table>
             <thead>
-              <th colspan="3">Your information</th>
+              <th colspan="4">Your information</th>
             </thead>
             <tr>
               <td>Your Name</td>
-              <td colspan="2">Andre Johnson</td>
+              <td colspan="3">{{fullName}}</td>
             </tr>
             <tr>
               <td>Shipping Address</td>
-              <td colspan="2">889 W Pender St #200, Vancouver, BC V6C 3B2</td>
+              <td colspan="3">{{address}}</td>
             </tr>
             <tr>
               <td>Payment</td>
-              <td>***********1234</td>
-              <td>Expired: 2022/08/22</td>
+              <td>{{creditCard}}</td>
+              <td>{{expiryDate}}</td>
             </tr>
           </table>
         </div>
+
         <h2>Your Order</h2>
         <div class="checkout-item">
           <div class="order-item-detail-pic"></div>
