--- a/cart.html
+++ b/cart.html
@@ -79,7 +79,7 @@
 <!-- FOOTER -->
 <footer>
   <aside>
-    <a href="/terms.html">Terms of service</a>
+    <a href="./privacyPolicy.html">Privacy Policy</a>
   </aside>
   <p>&copy;Copyright 2022 Final Project</p>
 </footer>
