--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
 
   <main ng-controller="Ctrl">
     <div class="form-wrapper" ng-show="loginView">
-      <h2>LogIn</h2>
+      <h2>Sign In</h2>
       <form>
         <div class="form-item">
           <label for="email">Email</label>
@@ -70,7 +70,7 @@
   <!-- FOOTER -->
   <footer>
     <aside>
-      <a href="/terms.html">Terms of service</a>
+      <a href="./privacyPolicy.html">Privacy Policy</a>
     </aside>
     <p>&copy;Copyright 2022 Final Project</p>
   </footer>
