shopping badge added

--- a/main.html
+++ b/main.html
@@ -33,7 +33,12 @@
       <li><a href="/other.html">Other</a></li>
       <!-- <li><a href="/main.html">Logout</a></li> -->
       <li ng-model="loginout"><a href="./login.html">Login</a></li>
-      <li><a href="/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+        <li class="navCart">
+        <a href="/cart.html">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <span class="navCartNum">1</span>
+        </a>
+      </li>
     </ul>
   </nav>
   <!-- NAV END -->
