--- a/index.html
+++ b/index.html
@@ -27,16 +27,20 @@
   <!-- HEADER END -->
 
   <!-- NAV START -->
-  <nav ng-app="myApp" class="gnav">
+  <nav ng-app="jsonApp" class="gnav">
     <ul class="gnav_wrapper">
       <li><a href="#!beer">Beer</a></li>
       <li><a href="#!wine">Wine</a></li>
       <li><a href="#!sake">Sake</a></li>
       <li><a href="#!other">Other</a></li>
-      <li><a href="#!">Logout</a></li>
       <li  ng-show="toggleIn"><a href="#!login">Sign In</a></li>
-      <li ng-show="toggleOut"><a href="#!index" ng-click="logoutBtn()">Sign Out</a></li>
-      <li><a href="#!cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
+      <li ng-show="toggleOut"><a href="#!login" ng-click="logoutBtn()">Sign Out</a></li>
+      <li class="navCart">
+        <a href="#!cart">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <span class="navCartNum">{{cartItems}}</span>
+        </a>
+      </li>
     </ul>
   </nav>
   <!-- NAV END -->
@@ -52,7 +56,7 @@
     </aside>
     <p>&copy;Copyright 2022 Final Project</p>
   </footer>
-
+  <script></script>
   <script src="./assets/js/classes/Product.js" type="text/javascript"></script>
   <script src="./assets/js/classes/User.js" type="text/javascript"></script>
   <script src="./assets/js/classes/ShoppingCart.js" type="text/javascript"></script>
