check if the cart is empty and display alert

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <li  ng-show="toggleIn"><a href="#!login">Sign In</a></li>
       <li ng-show="toggleOut"><a href="#!login" ng-click="logoutBtn()">Sign Out</a></li>
       <li class="navCart">
-        <a href="#!cart">
+        <a id="test"  href="#!cart">
           <i class="fa-solid fa-cart-shopping"></i>
           <span class="navCartNum">{{cartItems}}</span>
         </a>
