--- a/cart.html
+++ b/cart.html
@@ -21,7 +21,7 @@
 
     <div class="total">
     <h3>Total: <span>${{shopingCart.getTotalPrice()}}</span></h3>
-    <a class="checkout-btn" href="#!order">Checkout</a>
+    <button class="checkout-btn" ng-click="btnCheckout($event)">Checkout</button>
     </div>
   </div>
   </main>
