--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="This is Akane's Liquor Store">
   <meta name="author" content="Akane's Team">
-  <link href="https://gulp-project-static.storage.googleapis.com/LEGACY/favicon.png" rel="icon" type="image/png">
+  <link href="/assets/img/favicon.png" rel="icon">
   <title>Liquor Store</title>
   <link rel="stylesheet" href="./assets/css/style.css">
   <!-- FONT AWSOME -->
