--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
   <main ng-controller="Ctrl">
     <div class="form-wrapper" ng-show="loginView">
-      <h2>LogIn</h2>
+      <h2>Sign In</h2>
       <form>
         <div class="form-item">
           <label for="email">Email</label>
@@ -10,8 +10,8 @@
           <label for="password">Password</label>
           <input type="password" ng-model="password" id="password" name="password" placeholder="enter your password" required />
         </div>
-        <div ng-show="wrongInfo">
-          <span style="color: red;">*Incorrect email address or password</span>
+        <div class="wrongInfo" ng-show="wrongInfo">
+          <span>*Incorrect email address or password</span>
         </div>
         <p class="check">
           <input type="checkbox" name="checkbox" /> Remember Me
