--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- HEADER START -->
   <header>
     <h1>
-      <a href="#!">Liquor Store<i class="fa-solid fa-martini-glass"></i></a>
+      <a href="#!">JAM Liquor<i class="fa-solid fa-martini-glass"></i></a>
     </h1>
   </header>
   <!-- HEADER END -->
