--- a/order.html
+++ b/order.html
@@ -33,7 +33,7 @@
     </div>
     <div class="confirm-order">
       <div>
-        <p>Sub total: {{shopingCart.getTotalPrice()}}</p>
+        <p>Sub total: ${{shopingCart.getTotalPrice()}}</p>
         <p>Tax: {{tax}}%</p>
         <p>Shipping: ${{shipping}}</p>
         <h3>Total: <span>${{realPrice}}</span></h3>
