--- a/cart.html
+++ b/cart.html
@@ -29,7 +29,7 @@
 
     <div class="total">
     <h3>Total: <span>${{shopingCart.getTotalPrice()}}</span></h3>
-    <button class="checkout-btn" ng-click="btnCheckout($event)">Checkout</button>
+    <button ng-show="older" class="checkout-btn" ng-click="btnCheckout($event)">Checkout</button>
     </div>
   </div>
   </main>
