--- a/order.html
+++ b/order.html
@@ -4,7 +4,7 @@
       <div class="user-infomation">
         <table>
           <thead>
-          <th colspan="4">Your information</th>
+          <th class="yourInfo" colspan="4">Your information</th>
           </thead>
           <tr>
             <td>Your Name</td>
